style.css
/* import google font */

@import url("https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@10..48,400;10..48,500;10..48,600;10..48,700;10..48,800&display=swap");

body,
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
object-fit: cover;
  font-family: "Bricolage Grotesque", sans-serif;
 
}

.slideImage {
  display: none;
  width: 100%;
  object-fit: cover;
}

#logo {
  width: 80px;
  height: 50px;
}

.bookBtn {
  width: 70%;
  border: none;
  background-color: #76174d;
  color: white;
  border-radius: 5px;
}

.ourServices {
  background: linear-gradient(to right, #f36db8, #33031e);
}

/* menu animation */

#menuList {
  background: #76174d;
  padding: 5rem 0;
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 50%;
  height: 100vh;
  position: fixed;
  right: 0;
  transition-timing-function: cubic-bezier(10, 2, 3, 1);
  transform: translateX(50rem);
  top: 0;
  z-index: 0;
  transition: 0.5s;
}

#menuList,
a {
  margin-bottom: 2rem;
}
#menyAvPaa {
  display: none;
}

#menyAvPaa:checked ~ #menuList {
  transform: translateX(0rem);
}

#menuInput {
  position: absolute;
  cursor: pointer;
  width: 2rem;
  height: 1.6rem;
  right: 1rem;
  top: 1rem;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
}

#menuInput > div {
  height: 2px;
  background-color: #000;
  transition: 0.5s;
  z-index: 999;
}

#menyAvPaa:checked ~ #menuInput > div {
  background-color: #fff;
}

#menyAvPaa:checked ~ #menuInput > div:nth-child(1) {
  transform: translateY(15px) rotate(50deg);
  /* background-color: red; */
}
#menyAvPaa:checked ~ #menuInput > div:nth-child(2) {
  opacity: 0;
}
#menyAvPaa:checked ~ #menuInput > div:nth-child(3) {
  transform: translateY(-10px) rotate(-50deg);
}





.eventSection{
  margin-bottom: 30px;
display: grid;
justify-content: center;
grid-template-columns: repeat(1,80vw);

}

.eventsContainer{
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: white;
  /* width: 100%; */
  height: 60vh;
  border-radius: 20px;
  /* background-color: yellow; */
  margin: 5px 0;
  background-repeat: no-repeat;
  background-size: cover;
}


/* media query @ 775px */
@media only screen and (min-width: 775px) {


  .slideImage {
    height: 80vh;
    object-fit: fill;
  }


  .eventSection{
    
    justify-content: space-around;
    grid-template-columns: repeat(2,40vw);
   
    }
    
}


.teamContainer{
  border: 2px solid #F36DB8;
  border-radius: 5px;
  margin:0 5px 5px 0;
  box-shadow: 0px 0px 5px 0px rgba(243, 109, 185, 0.856) ;

  box-shadow: 0px 0px 5px 0px rgba(128, 0, 0, 1);

}

/* media query @ 1100px */
@media only screen and (min-width: 1100px) {
 
  .eventSection{
  
    grid-template-columns: repeat(3,27vw);
    justify-content: space-around;
   
    
 
    }
    
}














.mySlides {
  display:none;
}

.previousBtn,.nextBtn{
 padding: 5px 12px;
 border-radius: 90%;
 border: none;
 border: 2px solid #49022a;

}


.previousBtn:hover,.nextBtn:hover{
  background-color: #76174d;
  color: white;
}

